fix dropdown not working for invalid column names fix CLI alignment fix download button for firefox fix styling for vm

--- a/cdap-ui/app/cdap/components/DataPrep/DataPrep.scss
+++ b/cdap-ui/app/cdap/components/DataPrep/DataPrep.scss
@@ -15,6 +15,8 @@
  */
 
 .dataprep-container {
+  overflow: hidden;
+
   &.error { padding-top: 25px; }
 
   .dataprep-body.row {
