--- a/cdap-ui/app/cdap/components/DataPrep/DataPrepCLI/DataPrepCLI.scss
+++ b/cdap-ui/app/cdap/components/DataPrep/DataPrepCLI/DataPrepCLI.scss
@@ -55,6 +55,7 @@ $cli-font: "Courier New", Courier, monospace;
       strong {
         margin-left: 10px;
         user-select: none;
+        line-height: 30px;
       }
 
       .directive-input {
